welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:13: error: 'while' expected but '}' found.
	}
        ^